2005-10-21  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-gnupg.nsi: Fix path of deleted files.

	* src/gpg4win.mk.in (pdir): Don't strip DLL files.

2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* m4/gpg4win.m4 (GPG4WIN_DEFINE): New function.  Use it to define
	feature symbols for NSI.  Use m4_translit instead of m4_bpatsubst.
	New option --enable-debug.
	* include/config.nsi.in: Catch all this new information.
	* src/gpg4win.nsi (DEBUG): Define if [GPG4WIN_DEBUG].
	(HAVE_PKG_GPA): Don't define here.
	* src/inst-sections.nsi: Guard all package specific commands with
	feature macro checks.  Calculate dependencies on .onInit, too.
	* src/gpg4win.mk.in (STRIP_macro): Quote $(DEBUG) strictly.

	* src/installer-finish.nsi: Add support for Add/Remove Programs.

2005-10-20  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4 (GPG4WIN_FIND): Quote a file variable.
	(GPG4WIN_SPKG): Ditto.

2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: Add start menu support.
	* src/inst-sections.nsi: Likewise.
	* src/installer.nsi: Likewise.
	* src/installer-finish.nsi: Likewise.

	* src/gpg4win.mk.in (GETVAR): Don't quote the first $.
	(STRIP_macro): New macro.
	(SPKG, BPKG): Use it here.

	* Makefile.am (EXTRA_DIST): New target.
	* include/Makefile.am (EXTRA_DIST): Change config.nsh.in to
	config.nsi.in.
	* src/Makefile.am (EXTRA_DIST): Remove pkg-config.  Add nsi files.

	* src/inst-gpgol.nsi: Change libgpgol-0.9.3.dll to gpgol.dll.

	* src/gpg4win.mk.in (stamp/stamp-$(1)-02-configure): Add
	-mms-bitfields to CFLAGS.

	* src/gpg4win.mk.in (stamps/stamp-final): New target that replaces
	phony target final.

2005-10-20  Werner Koch  <wk@g10code.com>

	* src/*.nsi: Add a Latin-1 tag to make sure that Emacs uses the
	correct encoding.
	* doc/nsi-mode.el: Added for convenience.

2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for makensis.  Add gnupg as dependency for
	gpgme.  Change config.sh into config.nsi.